Updating MoM monster and mythos data.

--- a/content/MoM/base/evade.ini
+++ b/content/MoM/base/evade.ini
@@ -334,3 +334,875 @@ text={ffg:MONSTER_CULTIST_EVADE_11}
 monster=Cultist
 text={ffg:MONSTER_CULTIST_EVADE_12}
 
+[EvadeDarkDruid01]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_01}
+
+[EvadeDarkDruid02]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_02}
+
+[EvadeDarkDruid03]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_03}
+
+[EvadeDarkDruid04]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_04}
+
+[EvadeDarkDruid05]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_05}
+
+[EvadeDarkDruid06]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_06}
+
+[EvadeDarkDruid07]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_07}
+
+[EvadeDarkDruid08]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_08}
+
+[EvadeDarkDruid09]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_09}
+
+[EvadeDarkDruid10]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_10}
+
+[EvadeDarkDruid11]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_11}
+
+[EvadeDarkDruid12]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_EVADE_12}
+
+[EvadeDarkYoung01]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_01}
+
+[EvadeDarkYoung02]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_02}
+
+[EvadeDarkYoung03]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_03}
+
+[EvadeDarkYoung04]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_04}
+
+[EvadeDarkYoung05]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_05}
+
+[EvadeDarkYoung06]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_06}
+
+[EvadeDarkYoung07]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_07}
+
+[EvadeDarkYoung08]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_08}
+
+[EvadeDarkYoung09]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_09}
+
+[EvadeDarkYoung10]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_10}
+
+[EvadeDarkYoung11]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_11}
+
+[EvadeDarkYoung12]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_EVADE_12}
+
+[EvadeDeepOne01]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_01}
+
+[EvadeDeepOne02]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_02}
+
+[EvadeDeepOne03]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_03}
+
+[EvadeDeepOne04]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_04}
+
+[EvadeDeepOne05]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_05}
+
+[EvadeDeepOne06]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_06}
+
+[EvadeDeepOne07]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_07}
+
+[EvadeDeepOne08]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_08}
+
+[EvadeDeepOne09]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_09}
+
+[EvadeDeepOne10]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_10}
+
+[EvadeDeepOne11]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_11}
+
+[EvadeDeepOne12]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_EVADE_12}
+
+[EvadeDeepOneHybrid01]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_01}
+
+[EvadeDeepOneHybrid02]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_02}
+
+[EvadeDeepOneHybrid03]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_03}
+
+[EvadeDeepOneHybrid04]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_04}
+
+[EvadeDeepOneHybrid05]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_05}
+
+[EvadeDeepOneHybrid06]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_06}
+
+[EvadeDeepOneHybrid07]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_07}
+
+[EvadeDeepOneHybrid08]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_08}
+
+[EvadeDeepOneHybrid09]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_09}
+
+[EvadeDeepOneHybrid10]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_10}
+
+[EvadeDeepOneHybrid11]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_11}
+
+[EvadeDeepOneHybrid12]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_EVADE_12}
+
+[EvadeGhost01]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_01}
+
+[EvadeGhost02]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_02}
+
+[EvadeGhost03]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_03}
+
+[EvadeGhost04]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_04}
+
+[EvadeGhost05]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_05}
+
+[EvadeGhost06]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_06}
+
+[EvadeGhost07]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_07}
+
+[EvadeGhost08]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_08}
+
+[EvadeGhost09]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_09}
+
+[EvadeGhost10]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_10}
+
+[EvadeGhost11]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_11}
+
+[EvadeGhost12]
+monster=Ghost
+text={ffg:MONSTER_GHOST_EVADE_12}
+
+[EvadeGoatSpawn01]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_01}
+
+[EvadeGoatSpawn02]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_02}
+
+[EvadeGoatSpawn03]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_03}
+
+[EvadeGoatSpawn04]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_04}
+
+[EvadeGoatSpawn05]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_05}
+
+[EvadeGoatSpawn06]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_06}
+
+[EvadeGoatSpawn07]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_07}
+
+[EvadeGoatSpawn08]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_08}
+
+[EvadeGoatSpawn09]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_09}
+
+[EvadeGoatSpawn10]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_10}
+
+[EvadeGoatSpawn11]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_11}
+
+[EvadeGoatSpawn12]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_EVADE_12}
+
+[EvadeHoundOfTindalos01]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_01}
+
+[EvadeHoundOfTindalos02]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_02}
+
+[EvadeHoundOfTindalos03]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_03}
+
+[EvadeHoundOfTindalos04]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_04}
+
+[EvadeHoundOfTindalos05]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_05}
+
+[EvadeHoundOfTindalos06]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_06}
+
+[EvadeHoundOfTindalos07]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_07}
+
+[EvadeHoundOfTindalos08]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_08}
+
+[EvadeHoundOfTindalos09]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_09}
+
+[EvadeHoundOfTindalos10]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_10}
+
+[EvadeHoundOfTindalos11]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_11}
+
+[EvadeHoundOfTindalos12]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_EVADE_12}
+
+[EvadeHuntingHorror01]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_01}
+
+[EvadeHuntingHorror02]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_02}
+
+[EvadeHuntingHorror03]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_03}
+
+[EvadeHuntingHorror04]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_04}
+
+[EvadeHuntingHorror05]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_05}
+
+[EvadeHuntingHorror06]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_06}
+
+[EvadeHuntingHorror07]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_07}
+
+[EvadeHuntingHorror08]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_08}
+
+[EvadeHuntingHorror09]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_09}
+
+[EvadeHuntingHorror10]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_10}
+
+[EvadeHuntingHorror11]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_11}
+
+[EvadeHuntingHorror12]
+monster=HuntingHorror
+text={ffg:MONSTER_HUNTING_HORROR_EVADE_12}
+
+[EvadeManiac01]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_01}
+
+[EvadeManiac02]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_02}
+
+[EvadeManiac03]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_03}
+
+[EvadeManiac04]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_04}
+
+[EvadeManiac05]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_05}
+
+[EvadeManiac06]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_06}
+
+[EvadeManiac07]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_07}
+
+[EvadeManiac08]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_08}
+
+[EvadeManiac09]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_09}
+
+[EvadeManiac10]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_10}
+
+[EvadeManiac11]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_11}
+
+[EvadeManiac12]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_EVADE_12}
+
+[EvadeMigo01]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_01}
+
+[EvadeMigo02]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_02}
+
+[EvadeMigo03]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_03}
+
+[EvadeMigo04]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_04}
+
+[EvadeMigo05]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_05}
+
+[EvadeMigo06]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_06}
+
+[EvadeMigo07]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_07}
+
+[EvadeMigo08]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_08}
+
+[EvadeMigo09]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_09}
+
+[EvadeMigo10]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_10}
+
+[EvadeMigo11]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_11}
+
+[EvadeMigo12]
+monster=Migo
+text={ffg:MONSTER_MIGO_EVADE_12}
+
+[EvadeNightgaunt01]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_01}
+
+[EvadeNightgaunt02]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_02}
+
+[EvadeNightgaunt03]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_03}
+
+[EvadeNightgaunt04]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_04}
+
+[EvadeNightgaunt05]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_05}
+
+[EvadeNightgaunt06]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_06}
+
+[EvadeNightgaunt07]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_07}
+
+[EvadeNightgaunt08]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_08}
+
+[EvadeNightgaunt09]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_09}
+
+[EvadeNightgaunt10]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_10}
+
+[EvadeNightgaunt11]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_11}
+
+[EvadeNightgaunt12]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_EVADE_12}
+
+[EvadePriestOfDagon01]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_01}
+
+[EvadePriestOfDagon02]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_02}
+
+[EvadePriestOfDagon03]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_03}
+
+[EvadePriestOfDagon04]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_04}
+
+[EvadePriestOfDagon05]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_05}
+
+[EvadePriestOfDagon06]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_06}
+
+[EvadePriestOfDagon07]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_07}
+
+[EvadePriestOfDagon08]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_08}
+
+[EvadePriestOfDagon09]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_09}
+
+[EvadePriestOfDagon10]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_10}
+
+[EvadePriestOfDagon11]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_11}
+
+[EvadePriestOfDagon12]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_12}
+
+[EvadePriestOfDagon13]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_EVADE_13}
+
+[EvadeRiot01]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_01}
+
+[EvadeRiot02]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_02}
+
+[EvadeRiot03]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_03}
+
+[EvadeRiot04]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_04}
+
+[EvadeRiot05]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_05}
+
+[EvadeRiot06]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_06}
+
+[EvadeRiot07]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_07}
+
+[EvadeRiot08]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_08}
+
+[EvadeRiot09]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_09}
+
+[EvadeRiot10]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_10}
+
+[EvadeRiot11]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_11}
+
+[EvadeRiot12]
+monster=Riot
+text={ffg:MONSTER_RIOT_EVADE_12}
+
+[EvadeShoggoth01]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_01}
+
+[EvadeShoggoth02]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_02}
+
+[EvadeShoggoth03]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_03}
+
+[EvadeShoggoth04]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_04}
+
+[EvadeShoggoth05]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_05}
+
+[EvadeShoggoth06]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_06}
+
+[EvadeShoggoth07]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_07}
+
+[EvadeShoggoth08]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_08}
+
+[EvadeShoggoth09]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_09}
+
+[EvadeShoggoth10]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_10}
+
+[EvadeShoggoth11]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_11}
+
+[EvadeShoggoth12]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_EVADE_12}
+
+[EvadeStarSpawn01]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_01}
+
+[EvadeStarSpawn02]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_02}
+
+[EvadeStarSpawn03]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_03}
+
+[EvadeStarSpawn04]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_04}
+
+[EvadeStarSpawn05]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_05}
+
+[EvadeStarSpawn06]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_06}
+
+[EvadeStarSpawn07]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_07}
+
+[EvadeStarSpawn08]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_08}
+
+[EvadeStarSpawn09]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_09}
+
+[EvadeStarSpawn10]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_10}
+
+[EvadeStarSpawn11]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_11}
+
+[EvadeStarSpawn12]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_EVADE_12}
+
+[EvadeWitch01]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_01}
+
+[EvadeWitch02]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_02}
+
+[EvadeWitch03]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_03}
+
+[EvadeWitch04]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_04}
+
+[EvadeWitch05]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_05}
+
+[EvadeWitch06]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_06}
+
+[EvadeWitch07]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_07}
+
+[EvadeWitch08]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_08}
+
+[EvadeWitch09]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_09}
+
+[EvadeWitch10]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_10}
+
+[EvadeWitch11]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_11}
+
+[EvadeWitch12]
+monster=Witch
+text={ffg:MONSTER_WITCH_EVADE_12}
+
+[EvadeWizard01]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_01}
+
+[EvadeWizard02]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_02}
+
+[EvadeWizard03]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_03}
+
+[EvadeWizard04]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_04}
+
+[EvadeWizard05]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_05}
+
+[EvadeWizard06]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_06}
+
+[EvadeWizard07]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_07}
+
+[EvadeWizard08]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_08}
+
+[EvadeWizard09]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_09}
+
+[EvadeWizard10]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_10}
+
+[EvadeWizard11]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_11}
+
+[EvadeWizard12]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_EVADE_12}
+
+[EvadeZombie01]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_01}
+
+[EvadeZombie02]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_02}
+
+[EvadeZombie03]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_03}
+
+[EvadeZombie04]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_04}
+
+[EvadeZombie05]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_05}
+
+[EvadeZombie06]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_06}
+
+[EvadeZombie07]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_07}
+
+[EvadeZombie08]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_08}
+
+[EvadeZombie09]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_09}
+
+[EvadeZombie10]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_10}
+
+[EvadeZombie11]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_11}
+
+[EvadeZombie12]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_EVADE_12}
+
+[EvadeThrall01]
+monster=Thrall
+text={ffg:MONSTER_THRALL_EVADE_01}
+
