--- a/content/MoM/base/horror.ini
+++ b/content/MoM/base/horror.ini
@@ -330,3 +330,907 @@ text={ffg:MONSTER_CULTIST_HORROR_10}
 monster=Cultist
 text={ffg:MONSTER_CULTIST_HORROR_11}
 
+[HorrorCultist13]
+monster=Cultist
+text={ffg:MONSTER_CULTIST_HORROR_13}
+
+[HorrorCultist14]
+monster=Cultist
+text={ffg:MONSTER_CULTIST_HORROR_14}
+
+[HorrorDarkDruid01]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_01}
+
+[HorrorDarkDruid02]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_02}
+
+[HorrorDarkDruid03]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_03}
+
+[HorrorDarkDruid04]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_04}
+
+[HorrorDarkDruid05]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_05}
+
+[HorrorDarkDruid06]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_06}
+
+[HorrorDarkDruid07]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_07}
+
+[HorrorDarkDruid08]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_08}
+
+[HorrorDarkDruid09]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_09}
+
+[HorrorDarkDruid10]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_10}
+
+[HorrorDarkDruid11]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_11}
+
+[HorrorDarkDruid12]
+monster=DarkDruid
+text={ffg:MONSTER_DARK_DRUID_HORROR_12}
+
+[HorrorDarkYoung01]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_01}
+
+[HorrorDarkYoung02]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_02}
+
+[HorrorDarkYoung03]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_03}
+
+[HorrorDarkYoung04]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_04}
+
+[HorrorDarkYoung05]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_05}
+
+[HorrorDarkYoung06]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_06}
+
+[HorrorDarkYoung07]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_07}
+
+[HorrorDarkYoung08]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_08}
+
+[HorrorDarkYoung09]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_09}
+
+[HorrorDarkYoung10]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_10}
+
+[HorrorDarkYoung11]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_11}
+
+[HorrorDarkYoung12]
+monster=DarkYoung
+text={ffg:MONSTER_DARK_YOUNG_HORROR_12}
+
+[HorrorDeepOne01]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_01}
+
+[HorrorDeepOne02]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_02}
+
+[HorrorDeepOne03]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_03}
+
+[HorrorDeepOne04]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_04}
+
+[HorrorDeepOne05]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_05}
+
+[HorrorDeepOne06]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_06}
+
+[HorrorDeepOne07]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_07}
+
+[HorrorDeepOne08]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_08}
+
+[HorrorDeepOne09]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_09}
+
+[HorrorDeepOne10]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_10}
+
+[HorrorDeepOne11]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_11}
+
+[HorrorDeepOne12]
+monster=DeepOne
+text={ffg:MONSTER_DEEP_ONE_HORROR_12}
+
+[HorrorDeepOneHybrid01]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_01}
+
+[HorrorDeepOneHybrid02]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_02}
+
+[HorrorDeepOneHybrid03]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_03}
+
+[HorrorDeepOneHybrid04]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_04}
+
+[HorrorDeepOneHybrid05]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_05}
+
+[HorrorDeepOneHybrid06]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_06}
+
+[HorrorDeepOneHybrid07]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_07}
+
+[HorrorDeepOneHybrid08]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_08}
+
+[HorrorDeepOneHybrid09]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_09}
+
+[HorrorDeepOneHybrid10]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_10}
+
+[HorrorDeepOneHybrid11]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_11}
+
+[HorrorDeepOneHybrid12]
+monster=DeepOneHybrid
+text={ffg:MONSTER_DEEP_ONE_HYBRID_HORROR_12}
+
+[HorrorGhost01]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_01}
+
+[HorrorGhost02]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_02}
+
+[HorrorGhost03]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_03}
+
+[HorrorGhost04]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_04}
+
+[HorrorGhost05]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_05}
+
+[HorrorGhost06]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_06}
+
+[HorrorGhost07]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_07}
+
+[HorrorGhost08]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_08}
+
+[HorrorGhost09]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_09}
+
+[HorrorGhost10]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_10}
+
+[HorrorGhost11]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_11}
+
+[HorrorGhost12]
+monster=Ghost
+text={ffg:MONSTER_GHOST_HORROR_12}
+
+[HorrorGoatSpawn01]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_01}
+
+[HorrorGoatSpawn02]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_02}
+
+[HorrorGoatSpawn03]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_03}
+
+[HorrorGoatSpawn04]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_04}
+
+[HorrorGoatSpawn05]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_05}
+
+[HorrorGoatSpawn06]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_06}
+
+[HorrorGoatSpawn07]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_07}
+
+[HorrorGoatSpawn08]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_08}
+
+[HorrorGoatSpawn09]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_09}
+
+[HorrorGoatSpawn10]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_10}
+
+[HorrorGoatSpawn11]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_11}
+
+[HorrorGoatSpawn12]
+monster=GoatSpawn
+text={ffg:MONSTER_GOAT_SPAWN_HORROR_12}
+
+[HorrorHoundOfTindalos01]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_01}
+
+[HorrorHoundOfTindalos02]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_02}
+
+[HorrorHoundOfTindalos03]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_03}
+
+[HorrorHoundOfTindalos05]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_05}
+
+[HorrorHoundOfTindalos06]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_06}
+
+[HorrorHoundOfTindalos07]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_07}
+
+[HorrorHoundOfTindalos08]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_08}
+
+[HorrorHoundOfTindalos09]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_09}
+
+[HorrorHoundOfTindalos10]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_10}
+
+[HorrorHoundOfTindalos12]
+monster=HoundOfTindalos
+text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_12}
+
+[HorrorHunting01]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_01}
+
+[HorrorHunting02]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_02}
+
+[HorrorHunting03]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_03}
+
+[HorrorHunting04]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_04}
+
+[HorrorHunting05]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_05}
+
+[HorrorHunting06]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_06}
+
+[HorrorHunting07]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_07}
+
+[HorrorHunting08]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_08}
+
+[HorrorHunting09]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_09}
+
+[HorrorHunting10]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_10}
+
+[HorrorHunting11]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_11}
+
+[HorrorHunting12]
+monster=Hunting
+text={ffg:MONSTER_HUNTING_HORROR_HORROR_12}
+
+[HorrorManiac01]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_01}
+
+[HorrorManiac02]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_02}
+
+[HorrorManiac03]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_03}
+
+[HorrorManiac04]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_04}
+
+[HorrorManiac05]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_05}
+
+[HorrorManiac06]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_06}
+
+[HorrorManiac07]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_07}
+
+[HorrorManiac08]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_08}
+
+[HorrorManiac09]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_09}
+
+[HorrorManiac10]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_10}
+
+[HorrorManiac11]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_11}
+
+[HorrorManiac12]
+monster=Maniac
+text={ffg:MONSTER_MANIAC_HORROR_12}
+
+[HorrorMigo01]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_01}
+
+[HorrorMigo02]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_02}
+
+[HorrorMigo03]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_03}
+
+[HorrorMigo04]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_04}
+
+[HorrorMigo05]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_05}
+
+[HorrorMigo06]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_06}
+
+[HorrorMigo07]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_07}
+
+[HorrorMigo08]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_08}
+
+[HorrorMigo09]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_09}
+
+[HorrorMigo10]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_10}
+
+[HorrorMigo11]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_11}
+
+[HorrorMigo12]
+monster=Migo
+text={ffg:MONSTER_MIGO_HORROR_12}
+
+[HorrorNightgaunt01]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_01}
+
+[HorrorNightgaunt02]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_02}
+
+[HorrorNightgaunt03]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_03}
+
+[HorrorNightgaunt04]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_04}
+
+[HorrorNightgaunt05]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_05}
+
+[HorrorNightgaunt06]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_06}
+
+[HorrorNightgaunt07]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_07}
+
+[HorrorNightgaunt08]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_08}
+
+[HorrorNightgaunt09]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_09}
+
+[HorrorNightgaunt10]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_10}
+
+[HorrorNightgaunt11]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_11}
+
+[HorrorNightgaunt12]
+monster=Nightgaunt
+text={ffg:MONSTER_NIGHTGAUNT_HORROR_12}
+
+[HorrorPriestOfDagon01]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_01}
+
+[HorrorPriestOfDagon02]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_02}
+
+[HorrorPriestOfDagon03]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_03}
+
+[HorrorPriestOfDagon04]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_04}
+
+[HorrorPriestOfDagon05]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_05}
+
+[HorrorPriestOfDagon06]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_06}
+
+[HorrorPriestOfDagon07]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_07}
+
+[HorrorPriestOfDagon08]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_08}
+
+[HorrorPriestOfDagon09]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_09}
+
+[HorrorPriestOfDagon10]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_10}
+
+[HorrorPriestOfDagon11]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_11}
+
+[HorrorPriestOfDagon12]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_12}
+
+[HorrorPriestOfDagon13]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_13}
+
+[HorrorPriestOfDagon14]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_14}
+
+[HorrorPriestOfDagon15]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_15}
+
+[HorrorPriestOfDagon16]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_16}
+
+[HorrorPriestOfDagon17]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_17}
+
+[HorrorPriestOfDagon18]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_18}
+
+[HorrorPriestOfDagon19]
+monster=PriestOfDagon
+text={ffg:MONSTER_PRIEST_OF_DAGON_HORROR_19}
+
+[HorrorRiot01]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_01}
+
+[HorrorRiot02]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_02}
+
+[HorrorRiot03]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_03}
+
+[HorrorRiot04]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_04}
+
+[HorrorRiot05]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_05}
+
+[HorrorRiot06]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_06}
+
+[HorrorRiot07]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_07}
+
+[HorrorRiot08]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_08}
+
+[HorrorRiot09]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_09}
+
+[HorrorRiot10]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_10}
+
+[HorrorRiot11]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_11}
+
+[HorrorRiot12]
+monster=Riot
+text={ffg:MONSTER_RIOT_HORROR_12}
+
+[HorrorShoggoth01]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_01}
+
+[HorrorShoggoth02]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_02}
+
+[HorrorShoggoth03]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_03}
+
+[HorrorShoggoth04]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_04}
+
+[HorrorShoggoth05]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_05}
+
+[HorrorShoggoth06]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_06}
+
+[HorrorShoggoth07]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_07}
+
+[HorrorShoggoth08]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_08}
+
+[HorrorShoggoth09]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_09}
+
+[HorrorShoggoth10]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_10}
+
+[HorrorShoggoth11]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_11}
+
+[HorrorShoggoth12]
+monster=Shoggoth
+text={ffg:MONSTER_SHOGGOTH_HORROR_12}
+
+[HorrorStarSpawn01]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_01}
+
+[HorrorStarSpawn02]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_02}
+
+[HorrorStarSpawn03]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_03}
+
+[HorrorStarSpawn04]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_04}
+
+[HorrorStarSpawn05]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_05}
+
+[HorrorStarSpawn06]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_06}
+
+[HorrorStarSpawn07]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_07}
+
+[HorrorStarSpawn08]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_08}
+
+[HorrorStarSpawn09]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_09}
+
+[HorrorStarSpawn10]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_10}
+
+[HorrorStarSpawn11]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_11}
+
+[HorrorStarSpawn12]
+monster=StarSpawn
+text={ffg:MONSTER_STAR_SPAWN_HORROR_12}
+
+[HorrorWitch01]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_01}
+
+[HorrorWitch02]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_02}
+
+[HorrorWitch03]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_03}
+
+[HorrorWitch04]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_04}
+
+[HorrorWitch05]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_05}
+
+[HorrorWitch06]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_06}
+
+[HorrorWitch07]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_07}
+
+[HorrorWitch08]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_08}
+
+[HorrorWitch09]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_09}
+
+[HorrorWitch10]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_10}
+
+[HorrorWitch11]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_11}
+
+[HorrorWitch12]
+monster=Witch
+text={ffg:MONSTER_WITCH_HORROR_12}
+
+[HorrorWizard01]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_01}
+
+[HorrorWizard02]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_02}
+
+[HorrorWizard03]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_03}
+
+[HorrorWizard04]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_04}
+
+[HorrorWizard05]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_05}
+
+[HorrorWizard06]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_06}
+
+[HorrorWizard07]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_07}
+
+[HorrorWizard08]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_08}
+
+[HorrorWizard09]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_09}
+
+[HorrorWizard10]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_10}
+
+[HorrorWizard11]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_11}
+
+[HorrorWizard12]
+monster=Wizard
+text={ffg:MONSTER_WIZARD_HORROR_12}
+
+[HorrorZombie01]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_01}
+
+[HorrorZombie02]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_02}
+
+[HorrorZombie03]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_03}
+
+[HorrorZombie04]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_04}
+
+[HorrorZombie05]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_05}
+
+[HorrorZombie06]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_06}
+
+[HorrorZombie07]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_07}
+
+[HorrorZombie08]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_08}
+
+[HorrorZombie09]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_09}
+
+[HorrorZombie10]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_10}
+
+[HorrorZombie11]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_11}
+
+[HorrorZombie12]
+monster=Zombie
+text={ffg:MONSTER_ZOMBIE_HORROR_12}
+
+[HorrorThrall01]
+monster=Thrall
+text={ffg:MONSTER_THRALL_HORROR_01}
+
+[HorrorThrall04]
+monster=Thrall
+text={ffg:MONSTER_THRALL_HORROR_04}
+
+[HorrorThrall10]
+monster=Thrall
+text={ffg:MONSTER_THRALL_HORROR_10}
+
