gitIgnore extract-*.ini files

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ sysinfo.txt
 # FFG imported content
 /content/D2E/ffg
 /content/MoM/ffg
+# Valkyrie ini files importing ffg ones
+/content/extract-*.ini
