Solving tiles issues #79 and #80

--- a/content/MoM/mom1e/tiles.ini
+++ b/content/MoM/mom1e/tiles.ini
@@ -40,7 +40,7 @@ reverse=TileSideHallway2
 image="img/Tile_Corner_Hallway_1_MAD01.jpg"
 pps=72
 traits=inside medium hallway bathroom
-reverse=TileSideRootCellar
+reverse=TileSideRootCellar1E
 
 [TileSideCrypt]
 image="../ffg/img/Tile_Crypt_MAD01.dds"
@@ -96,7 +96,8 @@ traits=inside small bedroom storage
 reverse=TileSideSecretPassage
 
 [TileSideHallway1]
-image="img/Tile_Hallway_1_MAD01.dds"
+image="img/Tile_Hallway_1_MAD01.jpg"
+pps=72
 traits=inside small hallway
 reverse=TileSideCrypt
 
@@ -136,7 +137,7 @@ image="../ffg/img/Tile_Nursery_MAD01.dds"
 traits=inside small bathroom
 reverse=TileSideCeremonyRoom
 
-[TileSideRootCellar]
+[TileSideRootCellar1E]
 image="../ffg/img/Tile_Root_Cellar_MAD01.dds"
 traits=inside outside medium
 reverse=TileSideCornerHallway
