--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -52,19 +52,19 @@ button1="Continue"
 
 [PerilBackPain]
 text={ffg:MYTHOS_EVENT_BACK_PAIN}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
 [PerilBadMemories]
 text={ffg:MYTHOS_EVENT_BAD_MEMORIES}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
 [PerilBafflingVoices]
 text={ffg:MYTHOS_EVENT_BAFFLING_VOICES}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
@@ -96,7 +96,7 @@ button1="Continue"
 
 [PerilBigButInvisible]
 text={ffg:MYTHOS_EVENT_BIG_BUT_INVISIBLE}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
@@ -141,7 +141,7 @@ button1="Continue"
 
 [PerilBlackSwan]
 text={ffg:MYTHOS_EVENT_BLACK_SWAN}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
@@ -179,7 +179,7 @@ button1="Continue"
 
 [PerilBuildingNotToCode]
 text={ffg:MYTHOS_EVENT_BUILDING_NOT_TO_CODE}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
@@ -229,7 +229,7 @@ button1="Continue"
 
 [PerilChatter]
 text={ffg:MYTHOS_EVENT_CHATTER}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
@@ -304,13 +304,13 @@ button1="Continue"
 
 [PerilDisorientingFall]
 text={ffg:MYTHOS_EVENT_DISORIENTING_FALL}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
 [PerilDoYouEvenLift]
 text={ffg:MYTHOS_EVENT_DO_YOU_EVEN_LIFT}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
@@ -360,7 +360,7 @@ button1="Continue"
 
 [PerilFacemelt]
 text={ffg:MYTHOS_EVENT_FACEMELT}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
@@ -630,13 +630,13 @@ button1="Continue"
 
 [PerilHeatShimmerGlow]
 text={ffg:MYTHOS_EVENT_HEAT_SHIMMER_GLOW}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
 [PerilHelloWall]
 text={ffg:MYTHOS_EVENT_HELLO_WALL}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
@@ -680,7 +680,7 @@ button1="Continue"
 
 [PerilHulkOut]
 text={ffg:MYTHOS_EVENT_HULK_OUT}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
@@ -699,7 +699,7 @@ button1="Continue"
 
 [PerilHungryForWorms]
 text={ffg:MYTHOS_EVENT_HUNGRY_FOR_WORMS}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
@@ -769,7 +769,7 @@ button1="Continue"
 
 [PerilImSureItsFine]
 text={ffg:MYTHOS_EVENT_IM_SURE_ITS_FINE}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
