--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -10,6 +10,7 @@ traits=undead small
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterCthonian]
 ; Optional name for display (if spaces or other formatting required)
@@ -43,6 +44,7 @@ image="../ffg/img/Monster_Maniac.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterMiGo]
 ; Optional name for display (if spaces or other formatting required)
