--- a/content/MoM/base/activations.ini
+++ b/content/MoM/base/activations.ini
@@ -1416,12 +1416,14 @@ ability={ffg:MONSTER_GHOST_MOVE_05}
 master={ffg:MONSTER_GHOST_ATTACK_05}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
+; FIXME
 [MonsterActivationGhost06]
 ability={ffg:MONSTER_GHOST_MOVE_06}
 master={ffg:MONSTER_GHOST_ATTACK_06}
 movebutton=UNKOWN
 move={ffg:MONSTER_GHOST_MOVE_00}
 
+; FIXME
 [MonsterActivationGhost07]
 ability={ffg:MONSTER_GHOST_MOVE_07}
 master={ffg:MONSTER_GHOST_ATTACK_07}
@@ -1503,6 +1505,7 @@ master={ffg:MONSTER_GHOST_ATTACK_21}
 movebutton={ffg:UI_NOT_WITHIN_MOVE}
 move={ffg:MONSTER_GHOST_MOVE_00}
 
+; FIXME
 [MonsterActivationGhost22]
 ability={ffg:MONSTER_GHOST_MOVE_22}
 master={ffg:MONSTER_GHOST_ATTACK_22}
@@ -2436,6 +2439,7 @@ ability={ffg:MONSTER_PRIEST_OF_DAGON_MOVE_24}
 master={ffg:MONSTER_PRIEST_OF_DAGON_ATTACK_24}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
+; FIXME
 [MonsterActivationRiot01]
 ability={ffg:MONSTER_RIOT_MOVE_01}
 master={ffg:MONSTER_RIOT_ATTACK_01}
@@ -2533,6 +2537,7 @@ master={ffg:MONSTER_RIOT_ATTACK_17}
 movebutton={ffg:UI_NOT_WITHIN_2}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
+; FIXME
 [MonsterActivationRiot18]
 ability={ffg:MONSTER_RIOT_MOVE_18}
 master={ffg:MONSTER_RIOT_ATTACK_18}
