Monsters don't need a location, fixing migo image, health inherited on unique monsters.

--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -10,6 +10,7 @@ traits=undead small
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterCthonian]
 ; Optional name for display (if spaces or other formatting required)
@@ -43,12 +44,13 @@ image="../ffg/img/Monster_Maniac.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterMiGo]
 ; Optional name for display (if spaces or other formatting required)
 name="Mi Go"
 ; image to display
-image="../ffg/img/Monster_MiGo.dds"
+image="../ffg/img/Monster_Mi_Go.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 ; activation=
