Fixing zombie trait.

--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -4,13 +4,12 @@
 ; image to display
 image="../ffg/img/Monster_Zombie.dds"
 ; This will probably need some work to standardise
-traits=undead small
+traits=undead small humanoid
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
-traits=humanoid
 
 [MonsterCthonian]
 ; Optional name for display (if spaces or other formatting required)
