Adding fire spread.

--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -1,3 +1,12 @@
+[PerilFireSpread]
+text={ffg:COMMON_MYTHOS_FIRE}
+event1=
+button1="Continue"
+trigger=Mythos
+flags=#fire
+
+COMMON_MYTHOS_FIRE
+
 [PerilActionHeroRoll01]
 text={ffg:MYTHOS_EVENT_ACTION_HERO_ROLL_01}
 event1=PerilActionHeroRoll02
