--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -9,7 +9,7 @@ traits=undead small humanoid
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=1
 
 [MonsterCthonian]
 ; Optional name for display (if spaces or other formatting required)
@@ -65,7 +65,7 @@ image="../ffg/img/Monster_Shoggoth.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=4
 traits=beast
 
 [MonsterWitch]
