multilanguage string keys. keying ini files

--- a/content/MoM/btt/investigators.ini
+++ b/content/MoM/btt/investigators.ini
@@ -1,9 +1,9 @@
 [HeroWilsonRichards]
-name="Wilson Richards"
+name={ffg:INVESTIGATOR_WILSON_RICHARDS}
 image="../ffg/img/Circle_Investigator_Wilson_Richards.dds"
 traits=male
 
 [HeroAkachiOnyele]
-name="Akachi Onyele"
+name={ffg:INVESTIGATOR_AKACHI_ONYELE}
 image="../ffg/img/Circle_Investigator_Akachi_Onyele.dds"
 traits=female
