--- a/content/MoM/cotw/content_pack.ini
+++ b/content/MoM/cotw/content_pack.ini
@@ -1,5 +1,5 @@
 [ContentPack]
-name=Call of the Wild
+name={ffg:PRODUCT_TITLE_MAD09}
 description=First edition expansion, can use tiles, investigators and monsters.
 image="../ffg/img/MAD09.dds"
 id=CotW
