--- a/content/MoM/cotw/monsters.ini
+++ b/content/MoM/cotw/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterChildOfTheGoat]
 ; Optional name for display (if spaces or other formatting required)
-name="Child of the Goat"
+name={ffg:MONSTER_CHILD_OF_THE_GOAT}
 ; image to display
 image="../ffg/img/Monster_ChildOfTheGoat.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -11,7 +11,7 @@ image="../ffg/img/Monster_ChildOfTheGoat.dds"
 
 [MonsterDarkDruid]
 ; Optional name for display (if spaces or other formatting required)
-name="Dark Druid"
+name={ffg:MONSTER_DARK_DRUID}
 ; image to display
 image="../ffg/img/Monster_DarkDruid.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -23,7 +23,7 @@ traits=humanoid
 
 [MonsterDarkYoung]
 ; Optional name for display (if spaces or other formatting required)
-name="Dark Young"
+name={ffg:MONSTER_DARK_YOUNG}
 ; image to display
 image="../ffg/img/Monster_DarkYoung.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -35,7 +35,7 @@ traits=beast
 
 [MonsterGoatSpawn]
 ; Optional name for display (if spaces or other formatting required)
-name="Goat Spawn"
+name={ffg:MONSTER_GOAT_SPAWN}
 ; image to display
 image="../ffg/img/Monster_GoatSpawn.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -46,7 +46,7 @@ image="../ffg/img/Monster_GoatSpawn.dds"
 
 [MonsterNightgaunt]
 ; Optional name for display (if spaces or other formatting required)
-; name=""
+name={ffg:MONSTER_NIGHTGAUNT}
 ; image to display
 image="../ffg/img/Monster_Nightgaunt.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -57,7 +57,7 @@ image="../ffg/img/Monster_Nightgaunt.dds"
 
 [MonsterDunwichHorror]
 ; Optional name for display (if spaces or other formatting required)
-name="Dunwich Horror"
+name={ffg:UNIQUE_MONSTER_DUNWICH_HORROR}
 ; image to display
 image="../ffg/img/Monster_DunwichHorror.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -68,7 +68,7 @@ image="../ffg/img/Monster_DunwichHorror.dds"
 
 [MonsterWizard]
 ; Optional name for display (if spaces or other formatting required)
-; name=""
+name={ffg:UNIQUE_MONSTER_WIZARD}
 ; image to display
 image="../ffg/img/Monster_Wizard.dds"
 ; optional priority, allows content packs to duplicate content and replace items
