--- a/content/MoM/base/content_pack.ini
+++ b/content/MoM/base/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Mansions of Madness Second Edition
+name={ffg:PRODUCT_TITLE_MAD20}
 
 ; Optional description
 description=Base Game, required to play
