--- a/content/MoM/base/investigators.ini
+++ b/content/MoM/base/investigators.ini
@@ -1,6 +1,6 @@
 [HeroGloriaGoldberg]
 ; Optional name for display (if spaces or other formatting required)
-; name="Gloria Goldberg"
+name={ffg:INVESTIGATOR_GLORIA_GOLDBERG}
 ; image to display
 image="../ffg/img/Circle_Investigator_Gloria_Goldberg.dds"
 ; This will probably need some work to standardise
@@ -9,36 +9,36 @@ traits=female
 ; priority=0
 
 [HeroMinhThiPhan]
-name="Minh Thi Phan"
+name={ffg:INVESTIGATOR_MINH_THI_PHAN}
 image="../ffg/img/Circle_Investigator_Minh_Thi_Phan.dds"
 traits=female
 
 [HeroFatherMateo]
-name="Father Mateo"
+name={ffg:INVESTIGATOR_FATHER_MATEO}
 image="../ffg/img/Circle_Investigator_Father_Mateo.dds"
 traits=female
 
 [HeroPrestonFairmont]
-name="Preston Fairmont"
+name={ffg:INVESTIGATOR_PRESTON_FAIRMONT}
 image="../ffg/img/Circle_Investigator_Preston_Fairmont.dds"
 traits=female
 
 [HeroAgathaCrane]
-name="Agatha Crane"
+name={ffg:INVESTIGATOR_AGATHA_CRANE}
 image="../ffg/img/Circle_Investigator_Agatha_Crane.dds"
 traits=female
 
 [HeroCarsonSinclair]
-name="Carson Sinclair"
+name={ffg:INVESTIGATOR_CARSON_SINCLAIR}
 image="../ffg/img/Circle_Investigator_Carson_Sinclair.dds"
 traits=female
 
 [HeroWendyAdams]
-name="Wendy Adams"
+name={ffg:INVESTIGATOR_WENDY_ADAMS}
 image="../ffg/img/Circle_Investigator_Wendy_Adams.dds"
 traits=female
 
 [HeroWilliamYorick]
-name="William Yorick"
+name={ffg:INVESTIGATOR_WILLIAM_YORICK}
 image="../ffg/img/Circle_Investigator_William_Yorick.dds"
 traits=female
