--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterCultist]
 ; Optional name for display (if spaces or other formatting required)
-; name="Zombie"
+name={ffg:MONSTER_CULTIST}
 ; image to display
 image="../ffg/img/Monster_Cultist.dds"
 ; This will probably need some work to standardise
@@ -13,7 +13,7 @@ traits=small humanoid
 
 [MonsterDeepOne]
 ; Optional name for display (if spaces or other formatting required)
-name="Deep One"
+name={ffg:MONSTER_DEEP_ONE}
 ; image to display
 image="../ffg/img/Monster_DeepOne.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -24,7 +24,7 @@ image="../ffg/img/Monster_DeepOne.dds"
 
 [MonsterDeepOneHybrid]
 ; Optional name for display (if spaces or other formatting required)
-name="Deep One Hybrid"
+name={ffg:MONSTER_DEEP_ONE_HYBRID}
 ; image to display
 image="../ffg/img/Monster_DeepOneHybrid.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -35,7 +35,7 @@ image="../ffg/img/Monster_DeepOneHybrid.dds"
 
 [MonsterGhost]
 ; Optional name for display (if spaces or other formatting required)
-; name=""
+name={ffg:MONSTER_GHOST}
 ; image to display
 image="../ffg/img/MonsterGhost.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -47,7 +47,7 @@ traits=spirit
 
 [MonsterHuntingHorror]
 ; Optional name for display (if spaces or other formatting required)
-name="Hunting Horror"
+name={ffg:MONSTER_HUNTING_HORROR}
 ; image to display
 image="../ffg/img/Monster_HuntingHorror.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -59,7 +59,7 @@ traits=beast
 
 [MonsterRiot]
 ; Optional name for display (if spaces or other formatting required)
-; name=""
+name={ffg:MONSTER_RIOT}
 ; image to display
 image="../ffg/img/Monster_Riot.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -70,7 +70,7 @@ image="../ffg/img/Monster_Riot.dds"
 
 [MonsterStarSpawn]
 ; Optional name for display (if spaces or other formatting required)
-name="Star Spawn"
+name={ffg:MONSTER_STAR_SPAWN}
 ; image to display
 image="../ffg/img/Monster_StarSpawn.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -82,7 +82,7 @@ traits=beast
 
 [MonsterChildOfDagon]
 ; Optional name for display (if spaces or other formatting required)
-name="Child of Dagon"
+name={ffg:UNIQUE_MONSTER_CHILD_OF_DAGON}
 ; image to display
 image="../ffg/img/Monster_ChildOfDagon.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -93,7 +93,7 @@ image="../ffg/img/Monster_ChildOfDagon.dds"
 
 [MonsterHybridLeader]
 ; Optional name for display (if spaces or other formatting required)
-name="Hybrid Leader"
+name={ffg:UNIQUE_MONSTER_HYBRID_LEADER}
 ; image to display
 image="../ffg/img/Monster_HybridLeader.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -104,7 +104,7 @@ image="../ffg/img/Monster_HybridLeader.dds"
 
 [MonsterPriestOfDagon]
 ; Optional name for display (if spaces or other formatting required)
-name="Priest of Dagon"
+name={ffg:UNIQUE_MONSTER_PRIEST_OF_DAGON}
 ; image to display
 image="../ffg/img/Monster_PriestOfDagon.dds"
 ; optional priority, allows content packs to duplicate content and replace items
