--- a/content/MoM/btt/content_pack.ini
+++ b/content/MoM/btt/content_pack.ini
@@ -1,7 +1,7 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Beyond the Threshold
-description=Beyond the Threshold expansion.
+name={ffg:PRODUCT_TITLE_MAD23}
+description={ffg:PRODUCT_TITLE_MAD23}
 image="../ffg/img/MAD23.dds"
 id=BtT
 
