--- a/content/MoM/btt/monsters.ini
+++ b/content/MoM/btt/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterThrall]
 ; Optional name for display (if spaces or other formatting required)
-; name="Thrall"
+name={ffg:MONSTER_THRALL}
 ; image to display
 image="../ffg/img/Monster_Thrall.dds"
 ; optional priority, allows content packs to duplicate content and replace items
