corrected hero selection.updated ffg names with keys

--- a/content/MoM/base/investigators.ini
+++ b/content/MoM/base/investigators.ini
@@ -1,8 +1,8 @@
-[HeroGloriaGoldberg]
+[HeroRitaYoung]
 ; Optional name for display (if spaces or other formatting required)
-name={ffg:INVESTIGATOR_GLORIA_GOLDBERG}
+name={ffg:INVESTIGATOR_RITA_YOUNG}
 ; image to display
-image="../ffg/img/Circle_Investigator_Gloria_Goldberg.dds"
+image="../ffg/img/Circle_Investigator_Rita_Young.dds"
 ; This will probably need some work to standardise
 traits=female
 ; optional priority, allows content packs to duplicate content and replace items
@@ -16,12 +16,12 @@ traits=female
 [HeroFatherMateo]
 name={ffg:INVESTIGATOR_FATHER_MATEO}
 image="../ffg/img/Circle_Investigator_Father_Mateo.dds"
-traits=female
+traits=male
 
 [HeroPrestonFairmont]
 name={ffg:INVESTIGATOR_PRESTON_FAIRMONT}
 image="../ffg/img/Circle_Investigator_Preston_Fairmont.dds"
-traits=female
+traits=male
 
 [HeroAgathaCrane]
 name={ffg:INVESTIGATOR_AGATHA_CRANE}
@@ -31,7 +31,7 @@ traits=female
 [HeroCarsonSinclair]
 name={ffg:INVESTIGATOR_CARSON_SINCLAIR}
 image="../ffg/img/Circle_Investigator_Carson_Sinclair.dds"
-traits=female
+traits=male
 
 [HeroWendyAdams]
 name={ffg:INVESTIGATOR_WENDY_ADAMS}
@@ -41,4 +41,4 @@ traits=female
 [HeroWilliamYorick]
 name={ffg:INVESTIGATOR_WILLIAM_YORICK}
 image="../ffg/img/Circle_Investigator_William_Yorick.dds"
-traits=female
+traits=male
