--- a/content/MoM/fa/investigators.ini
+++ b/content/MoM/fa/investigators.ini
@@ -1,19 +1,19 @@
 [HeroCarolynFern]
-name="Carolyn Fern"
+name={ffg:INVESTIGATOR_CAROLYN_FERN}
 image="../ffg/img/Circle_Investigator_Carolyn_Fern.dds"
 traits=female
 
 [HeroDarrellSimmons]
-name="Darrell Simmons"
+name={ffg:INVESTIGATOR_DARRELL_SIMMONS}
 image="../ffg/img/Circle_Investigator_Darrell_Simmons.dds"
 traits=male
 
 [HeroDexterDrake]
-name="Dexter Drake"
+name={ffg:INVESTIGATOR_DEXTER_DRAKE}
 image="../ffg/img/Circle_Investigator_Dexter_Drake.dds"
 traits=male
 
 [HeroVincentLee]
-name="Vincent Lee"
+name={ffg:INVESTIGATOR_VINCENT_LEE}
 image="../ffg/img/Circle_Investigator_Vincent_Lee.dds"
 traits=male
