--- a/content/MoM/fa/monsters.ini
+++ b/content/MoM/fa/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterByakhee]
 ; Optional name for display (if spaces or other formatting required)
-; name=""
+name={ffg:MONSTER_BYAKHEE}
 ; image to display
 image="../ffg/img/Monster_Byakhee.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -11,7 +11,7 @@ image="../ffg/img/Monster_Byakhee.dds"
 
 [MonsterCrawlingOne]
 ; Optional name for display (if spaces or other formatting required)
-; name="Crawling One"
+name={ffg:MONSTER_CRAWLING_ONE}
 ; image to display
 image="../ffg/img/Monster_CrawlingOne.dds"
 ; optional priority, allows content packs to duplicate content and replace items
