--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterZombie]
 ; Optional name for display (if spaces or other formatting required)
-; name="Zombie"
+name={ffg:MONSTER_ZOMBIE}
 ; image to display
 image="../ffg/img/Monster_Zombie.dds"
 ; This will probably need some work to standardise
@@ -13,7 +13,7 @@ traits=undead small
 
 [MonsterCthonian]
 ; Optional name for display (if spaces or other formatting required)
-; name=""
+name={ffg:MONSTER_CTHONIAN}
 ; image to display
 image="../ffg/img/Monster_Cthonian.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -24,7 +24,7 @@ image="../ffg/img/Monster_Cthonian.dds"
 
 [MonsterHoundOfTindalos]
 ; Optional name for display (if spaces or other formatting required)
-name="Hound of Tindalos"
+name={ffg:MONSTER_HOUND_OF_TINDALOS}
 ; image to display
 image="../ffg/img/Monster_HoundOfTindalos.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -35,7 +35,7 @@ image="../ffg/img/Monster_HoundOfTindalos.dds"
 
 [MonsterManiac]
 ; Optional name for display (if spaces or other formatting required)
-; name=""
+name={ffg:MONSTER_MANIAC}
 ; image to display
 image="../ffg/img/Monster_Maniac.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -46,7 +46,7 @@ image="../ffg/img/Monster_Maniac.dds"
 
 [MonsterMiGo]
 ; Optional name for display (if spaces or other formatting required)
-name="Mi Go"
+name={ffg:MONSTER_MI_GO}
 ; image to display
 image="../ffg/img/Monster_MiGo.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -57,7 +57,7 @@ image="../ffg/img/Monster_MiGo.dds"
 
 [MonsterShoggoth]
 ; Optional name for display (if spaces or other formatting required)
-; name=""
+name={ffg:MONSTER_SHOGGOTH}
 ; image to display
 image="../ffg/img/Monster_Shoggoth.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -69,7 +69,7 @@ traits=beast
 
 [MonsterWitch]
 ; Optional name for display (if spaces or other formatting required)
-; name=""
+name={ffg:MONSTER_WITCH}
 ; image to display
 image="../ffg/img/Monster_Witch.dds"
 ; optional priority, allows content packs to duplicate content and replace items
@@ -81,7 +81,7 @@ traits=humanoid
 
 [MonsterCultLeader]
 ; Optional name for display (if spaces or other formatting required)
-name="Cult Leader"
+name={ffg:UNIQUE_MONSTER_CULT_LEADER}
 ; image to display
 image="../ffg/img/Monster_CultLeader.dds"
 ; optional priority, allows content packs to duplicate content and replace items
