--- a/content/MoM/fa/content_pack.ini
+++ b/content/MoM/fa/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Forbidden Alchemy
+name={ffg:PRODUCT_TITLE_MAD06}
 description=First edition expansion, can use tiles, investigators and monsters.
 image="../ffg/img/MAD06.dds"
 id=FA
