--- a/content/MoM/mom1e/content_pack.ini
+++ b/content/MoM/mom1e/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Mansions of Madness
+name={ffg:PRODUCT_TITLE_MAD01}
 description=First Edition, can use tiles monsters and investigators
 image="../ffg/img/MAD01.dds"
 id=MoM1E
