--- a/content/MoM/mom1e/investigators.ini
+++ b/content/MoM/mom1e/investigators.ini
@@ -1,41 +1,41 @@
 [HeroMichaelMcGlen]
-name="Michael McGlen"
+name={ffg:INVESTIGATOR_MICHAEL_MCGLEN}
 image="../ffg/img/Circle_Investigator_Michael_McGlen.dds"
 traits=male
 
 [HeroAshcanPete]
-name=""Ashcan" Pete"
+name={ffg:INVESTIGATOR_ASHCAN_PETE}
 image="../ffg/img/Circle_Investigator_Ashcan_Pete.dds"
 traits=male
 item=ItemUniqueDukeTheDog
 
 [HeroGloriaGoldberg]
-name="Gloria Goldberg"
+name={ffg:INVESTIGATOR_GLORIA_GOLDBERG}
 image="../ffg/img/Circle_Investigator_Gloria_Goldberg.dds"
 traits=female
 
 [HeroHarveyWalters]
-name="Harvey Walters"
+name={ffg:INVESTIGATOR_HARVEY_WALTERS}
 image="../ffg/img/Circle_Investigator_Harvey_Walters.dds"
 traits=male
 
 [HeroJennyBarnes]
-name="Jenny Barnes"
+name={ffg:INVESTIGATOR_JENNY_BARNES}
 image="../ffg/img/Circle_Investigator_Jenny_Barnes.dds"
 traits=female
 
 [HeroJoeDiamond]
-name="Joe Diamond"
+name={ffg:INVESTIGATOR_JOE_DIAMOND}
 image="../ffg/img/Circle_Investigator_Joe_Diamond.dds"
 traits=male
 
 [HeroKateWinthrop]
-name="Kate Winthrop"
+name={ffg:INVESTIGATOR_KATE_WINTHROP}
 image="../ffg/img/Circle_Investigator_Kate_Winthrop.dds"
 traits=female
 item=ItemUniqueFluxStabilizer
 
 [HeroSisterMary]
-name="Sister Mary"
+name={ffg:INVESTIGATOR_SISTER_MARY}
 image="../ffg/img/Circle_Investigator_Sister_Mary.dds"
 traits=female
