Started adding correct flags.

--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -5,175 +5,198 @@ button1="Continue"
 trigger=Mythos
 flags=#fire
 
-COMMON_MYTHOS_FIRE
-
+; rank 1.125
 [PerilActionHeroRoll01]
 text={ffg:MYTHOS_EVENT_ACTION_HERO_ROLL_01}
 event1=PerilActionHeroRoll02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosStreetCorner
+
+; rank 1.125
+[PerilActionHeroRoll01]
+text={ffg:MYTHOS_EVENT_ACTION_HERO_ROLL_01}
+event1=PerilActionHeroRoll02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMinor mythosAlleyCorner
 
 [PerilActionHeroRoll02]
 text={ffg:MYTHOS_EVENT_ACTION_HERO_ROLL_02}
 event1=
 button1="Continue"
 
+; rank 0.5
 [PerilAloneWithYourThoughts01]
 text={ffg:MYTHOS_EVENT_ALONE_WITH_YOUR_THOUGHTS_01}
 event1=PerilAloneWithYourThoughts02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilAloneWithYourThoughts02]
 text={ffg:MYTHOS_EVENT_ALONE_WITH_YOUR_THOUGHTS_02}
 event1=
 button1="Continue"
 
+; rank 0.35 location?
 [PerilAlwaysMoneyInTheSnackShack01]
 text={ffg:MYTHOS_EVENT_ALWAYS_MONEY_IN_THE_SNACK_SHACK_01}
 event1=PerilAlwaysMoneyInTheSnackShack02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosUnfinished
 
 [PerilAlwaysMoneyInTheSnackShack02]
 text={ffg:MYTHOS_EVENT_ALWAYS_MONEY_IN_THE_SNACK_SHACK_02}
 event1=
 button1="Continue"
 
+; rank 2.1
 [PerilAncientKnowledge01]
 text={ffg:MYTHOS_EVENT_ANCIENT_KNOWLEDGE_01}
 event1=PerilAncientKnowledge02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosLibrary
 
 [PerilAncientKnowledge02]
 text={ffg:MYTHOS_EVENT_ANCIENT_KNOWLEDGE_02}
 event1=
 button1="Continue"
 
+; rank 0.25
 [PerilBackPain]
 text={ffg:MYTHOS_EVENT_BACK_PAIN}
 flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 1
 [PerilBadMemories]
 text={ffg:MYTHOS_EVENT_BAD_MEMORIES}
 flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 1.25
 [PerilBafflingVoices]
 text={ffg:MYTHOS_EVENT_BAFFLING_VOICES}
 flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 3
 [PerilBallLightning01]
 text={ffg:MYTHOS_EVENT_BALL_LIGHTNING_01}
 event1=PerilBallLightning02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosOutdoors
 
 [PerilBallLightning02]
 text={ffg:MYTHOS_EVENT_BALL_LIGHTNING_02}
 event1=
 button1="Continue"
 
+; rank 1.75
 [PerilBats01]
 text={ffg:MYTHOS_EVENT_BATS_01}
 event1=PerilBats02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosOutdoors
 
 [PerilBats02]
 text={ffg:MYTHOS_EVENT_BATS_02}
 event1=
 button1="Continue"
 
+; rank 2
 [PerilBigButInvisible]
 text={ffg:MYTHOS_EVENT_BIG_BUT_INVISIBLE}
-flags=mythosMinor
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 2.8
 [PerilBigThoughts01]
 text={ffg:MYTHOS_EVENT_BIG_THOUGHTS_01}
 event1=PerilBigThoughts02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor
 
 [PerilBigThoughts02]
 text={ffg:MYTHOS_EVENT_BIG_THOUGHTS_02}
 event1=
 button1="Continue"
 
+; rank 3
 [PerilBigbysSlappingHand01]
 text={ffg:MYTHOS_EVENT_BIGBYS_SLAPPING_HAND_01}
 event1=PerilBigbysSlappingHand02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor
 
 [PerilBigbysSlappingHand02]
 text={ffg:MYTHOS_EVENT_BIGBYS_SLAPPING_HAND_02}
 event1=
 button1="Continue"
 
+; rank 2.45
 [PerilBirdsong01]
 text={ffg:MYTHOS_EVENT_BIRDSONG_01}
 event1=PerilBirdsong02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosOutdoors
 
 [PerilBirdsong02]
 text={ffg:MYTHOS_EVENT_BIRDSONG_02}
 event1=
 button1="Continue"
 
+; rank 5
 [PerilBlackSwan]
 text={ffg:MYTHOS_EVENT_BLACK_SWAN}
 flags=mythosDeadly
 event1=
 button1="Continue"
 
+; rank 1
 [PerilBlender01]
 text={ffg:MYTHOS_EVENT_BLENDER_01}
 event1=PerilBlender02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosKitchen
 
 [PerilBlender02]
 text={ffg:MYTHOS_EVENT_BLENDER_02}
 event1=
 button1="Continue"
 
+; special - discard item
 [PerilBreakAnItem01]
 text={ffg:MYTHOS_EVENT_BREAK_AN_ITEM_01}
 event1=PerilBreakAnItem02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosDiscardItem
 
 [PerilBreakAnItem02]
 text={ffg:MYTHOS_EVENT_BREAK_AN_ITEM_02}
@@ -182,117 +205,137 @@ button1="Continue"
 
 [PerilBreeze]
 text={ffg:MYTHOS_EVENT_BREEZE}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 2.25
 [PerilBuildingNotToCode]
 text={ffg:MYTHOS_EVENT_BUILDING_NOT_TO_CODE}
 flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 0.5
 [PerilBumLeg01]
 text={ffg:MYTHOS_EVENT_BUM_LEG_01}
 event1=PerilBumLeg02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilBumLeg02]
 text={ffg:MYTHOS_EVENT_BUM_LEG_02}
 event1=
 button1="Continue"
 
+; rank 7.2
 [PerilButINeedThose]
 text={ffg:MYTHOS_EVENT_BUT_I_NEED_THOSE}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
 [PerilCar]
 text={ffg:MYTHOS_EVENT_CAR}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 3.6
 [PerilCaughtInTheOpen]
 text={ffg:MYTHOS_EVENT_CAUGHT_IN_THE_OPEN}
-flags=mythos
+flags=mythosMajor mythosOutdoors
 event1=
 button1="Continue"
 
+; rank 2.45
 [PerilChasingFaeries01]
 text={ffg:MYTHOS_EVENT_CHASING_FAERIES_01}
 event1=PerilChasingFaeries02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosUnfinished
 
 [PerilChasingFaeries02]
 text={ffg:MYTHOS_EVENT_CHASING_FAERIES_02}
 event1=
 button1="Continue"
 
+; rank 1.2
 [PerilChatter]
 text={ffg:MYTHOS_EVENT_CHATTER}
 flags=mythosMinor
 event1=
 button1="Continue"
 
+
 [PerilChill]
 text={ffg:MYTHOS_EVENT_CHILL}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank -4
 [PerilClarity]
 text={ffg:MYTHOS_EVENT_CLARITY}
-flags=mythos
+flags=mythosHelp
 event1=
 button1="Continue"
 
 [PerilColourOutOfSpace]
 text={ffg:MYTHOS_EVENT_COLOUR_OUT_OF_SPACE}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 1.6
 [PerilConfinement01]
 text={ffg:MYTHOS_EVENT_CONFINEMENT_01}
 event1=PerilConfinement02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosAlley
+
+; rank 1.6
+[PerilConfinement01]
+text={ffg:MYTHOS_EVENT_CONFINEMENT_01}
+event1=PerilConfinement02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMinor mythosHall
 
 [PerilConfinement02]
 text={ffg:MYTHOS_EVENT_CONFINEMENT_02}
 event1=
 button1="Continue"
 
+; rank 5.8
 [PerilCrashOfLightning01]
 text={ffg:MYTHOS_EVENT_CRASH_OF_LIGHTNING_01}
 event1=PerilCrashOfLightning02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosOutdoors
 
 [PerilCrashOfLightning02]
 text={ffg:MYTHOS_EVENT_CRASH_OF_LIGHTNING_02}
 event1=
 button1="Continue"
 
+; rank 3.45
 [PerilCrazyElegantFloors01]
 text={ffg:MYTHOS_EVENT_CRAZY_ELEGANT_FLOORS_01}
 event1=PerilCrazyElegantFloors02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosBallroom
 
 [PerilCrazyElegantFloors02]
 text={ffg:MYTHOS_EVENT_CRAZY_ELEGANT_FLOORS_02}
@@ -301,13 +344,13 @@ button1="Continue"
 
 [PerilCreak]
 text={ffg:MYTHOS_EVENT_CREAK}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
 [PerilCrickets]
 text={ffg:MYTHOS_EVENT_CRICKETS}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
